--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Space Dynamic - SEO HTML5 Template</title>
+    <title>R.S Films - SEO HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -83,9 +83,9 @@ https://templatemo.com/tm-562-space-dynamic
           <div class="row">
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <h6>Welcome to Space Dynamic</h6>
-                <h2>We Make <em>Digital Ideas</em> &amp; <span>SEO</span> Marketing</h2>
-                <p>Space Dynamic is a professional looking HTML template using a Bootstrap 5 (beta 2). This CSS template is free for you provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_parent">TemplateMo</a>.</p>
+                <h6>Welcome to R.S Films</h6>
+                <h2>R.S Films – <em>Your One-Stop</em> &amp; <span>Destination for Song</span> & Film Production."</h2>
+                <p>We don’t just create content — we craft experiences. Let your music shine with cinematic visuals, dynamic editing, and high-impact digital presence. <a rel="nofollow" href="https://templatemo.com/page/1" target="_parent">TemplateMo</a>.</p>
                 <form id="search" action="#" method="GET">
                   <fieldset>
                     <input type="address" name="address" class="email" placeholder="Your website URL..." autocomplete="on" required>
@@ -124,8 +124,18 @@ https://templatemo.com/tm-562-space-dynamic
                     <img src="assets/images/service-icon-01.png" alt="reporting">
                   </div>
                   <div class="right-text">
-                    <h4>Data Analysis</h4>
-                    <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
+                    <h4>Song Shooting (Video Production)</h4>
+                    <p>We conceptualize, shoot, and direct professional-quality music videos. From romantic tracks to devotional songs, item songs to emotional ballads — we handle:
+
+Script Writing & Storyboarding
+
+Location Scouting
+
+Cinematic Camera Setup (DSLRs, drones, gimbals)
+
+Professional Lighting & Crew
+
+Direction and On-Set Management</p>
                   </div>
                 </div>
               </div>
@@ -135,8 +145,18 @@ https://templatemo.com/tm-562-space-dynamic
                     <img src="assets/images/service-icon-02.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Data Reporting</h4>
-                    <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
+                    <h4>Video Editing & Post-Production</h4>
+                    <p>We turn raw footage into polished masterpieces with:
+
+High-quality Video Editing (Color Grading, Transitions, Cuts)
+
+VFX & Green Screen Integration
+
+Lyrics On-Screen Synchronization
+
+Reels & Shorts Creation
+
+Audio Synchronization & Mastering</p>
                   </div>
                 </div>
               </div>
@@ -146,8 +166,18 @@ https://templatemo.com/tm-562-space-dynamic
                     <img src="assets/images/service-icon-03.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Web Analytics</h4>
-                    <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
+                    <h4>Poster Designing & Thumbnail Creation</h4>
+                    <p>Your song or project needs strong visuals — we deliver:
+
+HD Song Posters (Social Media Optimized)
+
+Movie & Event Posters
+
+Eye-catching YouTube Thumbnails
+
+Motion Posters
+
+Devotional & Festival Creatives</p>
                   </div>
                 </div>
               </div>
@@ -157,8 +187,22 @@ https://templatemo.com/tm-562-space-dynamic
                     <img src="assets/images/service-icon-04.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>SEO Suggestions</h4>
-                    <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
+                    <h4>YouTube Channel Management</h4>
+                    <p>We manage YouTube channels for artists & labels professionally:
+
+Daily/Weekly Upload Planning
+
+Video SEO (Titles, Descriptions, Tags)
+
+Thumbnail Design
+
+Channel Branding (Logo, Banner, Watermark)
+
+Community Post Management
+
+Monetization Support & Strategy
+
+</p>
                   </div>
                 </div>
               </div>
