--- a/index.html
+++ b/index.html
@@ -109,15 +109,10 @@
                   <div class="right-text">
                     <h4>Song Shooting (Video Production)</h4>
                     <p>We conceptualize, shoot, and direct professional-quality music videos. From romantic tracks to devotional songs, item songs to emotional ballads — we handle:
-
-Script Writing & Storyboarding
-
-Location Scouting
-
-Cinematic Camera Setup (DSLRs, drones, gimbals)
-
-Professional Lighting & Crew
-
+Script Writing & Storyboarding,
+Location Scouting,
+Cinematic Camera Setup (DSLRs, drones, gimbals),
+Professional Lighting & Crew,
 Direction and On-Set Management</p>
                   </div>
                 </div>
@@ -130,15 +125,10 @@ Direction and On-Set Management</p>
                   <div class="right-text">
                     <h4>Video Editing & Post-Production</h4>
                     <p>We turn raw footage into polished masterpieces with:
-
-High-quality Video Editing (Color Grading, Transitions, Cuts)
-
-VFX & Green Screen Integration
-
-Lyrics On-Screen Synchronization
-
-Reels & Shorts Creation
-
+High-quality Video Editing (Color Grading, Transitions, Cuts),
+VFX & Green Screen Integration,
+Lyrics On-Screen Synchronization,
+Reels & Shorts Creation,
 Audio Synchronization & Mastering</p>
                   </div>
                 </div>
@@ -151,15 +141,10 @@ Audio Synchronization & Mastering</p>
                   <div class="right-text">
                     <h4>Poster Designing & Thumbnail Creation</h4>
                     <p>Your song or project needs strong visuals — we deliver:
-
-HD Song Posters (Social Media Optimized)
-
-Movie & Event Posters
-
-Eye-catching YouTube Thumbnails
-
-Motion Posters
-
+HD Song Posters (Social Media Optimized),
+Movie & Event Posters,
+Eye-catching YouTube Thumbnails,
+Motion Posters,
 Devotional & Festival Creatives</p>
                   </div>
                 </div>
@@ -172,17 +157,11 @@ Devotional & Festival Creatives</p>
                   <div class="right-text">
                     <h4>YouTube Channel Management</h4>
                     <p>We manage YouTube channels for artists & labels professionally:
-
-Daily/Weekly Upload Planning
-
-Video SEO (Titles, Descriptions, Tags)
-
-Thumbnail Design
-
-Channel Branding (Logo, Banner, Watermark)
-
-Community Post Management
-
+Daily/Weekly Upload Planning,
+Video SEO (Titles, Descriptions, Tags),
+Thumbnail Design,
+Channel Branding (Logo, Banner, Watermark),
+Community Post Management,
 Monetization Support & Strategy
 
 </p>
