--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col-lg-8 align-self-center">
           <div class="services">
             <div class="row">
-              <div class="col-lg-8">
+              <div class="col-lg-6">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                   <div class="icon">
                     <img src="assets/images/service-icon-01.png" alt="reporting">
@@ -117,7 +117,7 @@ Direction and On-Set Management</p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-lg-6">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
                   <div class="icon">
                     <img src="assets/images/service-icon-02.png" alt="">
@@ -133,7 +133,7 @@ Audio Synchronization & Mastering</p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-lg-6">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.9s">
                   <div class="icon">
                     <img src="assets/images/service-icon-03.png" alt="">
@@ -149,7 +149,7 @@ Devotional & Festival Creatives</p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-lg-6">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="1.1s">
                   <div class="icon">
                     <img src="assets/images/service-icon-04.png" alt="">
@@ -185,30 +185,30 @@ Monetization Support & Strategy
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
-            <h2>Grow your website with our <em>SEO</em> service &amp; <span>Project</span> Ideas</h2>
-            <p>Space Dynamic HTML5 template is free to use for your website projects. However, you are not permitted to redistribute the template ZIP file on any CSS template collection websites. Please contact us for more information. Thank you for your kind cooperation.</p>
+            <h2>Boost Your <em>Digital Presence</em> with amp; <span>R.S Films</span> Ideas</h2>
+            <p>At R.S Films, we offer professional services in song shooting, video editing, poster designing, YouTube channel management, and Instagram promotions. Take your brand to the next level with our creative and result-driven media solutions.</p>
           </div>
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Website Analysis</h4>
-                <span>84%</span>
+                <h4>Project Delivery Rate</h4>
+                <span>96%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-                <h4>SEO Reports</h4>
-                <span>88%</span>
+                <h4>Client Satisfaction</h4>
+                <span>98%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="third-bar progress-skill-bar">
-                <h4>Page Optimizations</h4>
-                <span>94%</span>
+                <h4>Channel Growth Efficiency</h4>
+                <span>99%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
