--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@ Monetization Support & Strategy
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
-            <h2>Boost Your <em>Digital Presence</em> with amp; <span>R.S Films</span> Ideas</h2>
+            <h2>Boost Your <em>Digital Presence</em> with; <span>R.S Films Group</span> Ideas</h2>
             <p>At R.S Films, we offer professional services in song shooting, video editing, poster designing, YouTube channel management, and Instagram promotions. Take your brand to the next level with our creative and result-driven media solutions.</p>
           </div>
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Project Delivery Rate</h4>
+                <h4>Channel Growth Efficiency</h4>
                 <span>96%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -207,7 +207,7 @@ Monetization Support & Strategy
             </div>
             <div class="col-lg-12">
               <div class="third-bar progress-skill-bar">
-                <h4>Channel Growth Efficiency</h4>
+                <h4>Project Delivery Rate</h4>
                 <span>99%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -224,7 +224,7 @@ Monetization Support & Strategy
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2>See What Our Agency <em>Offers</em> &amp; What We <span>Provide</span></h2>
+            <h2 class="section-heading">Explore What <em>R.S Films</em> Offers &amp; How We <span>Deliver Excellence</span></h2>
           </div>
         </div>
       </div>
