--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ Monetization Support & Strategy
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
-                <h4>SEO Analysis</h4>
-                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                <h4>Music Video Shooting</h4>
+                <p>Cinematic song shoots with professional direction.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
@@ -246,8 +246,8 @@ Monetization Support & Strategy
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <div class="hidden-content">
-                <h4>Website Reporting</h4>
-                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                <h4>Video Editing & VFX</h4>
+                <p>tunning edits with effects, color grading & 4K export.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
@@ -259,8 +259,8 @@ Monetization Support & Strategy
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="hidden-content">
-                <h4>Performance Tests</h4>
-                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                <h4>Poster Designing</h4>
+                <p>Eye-catching posters & thumbnails for digital platforms.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
@@ -272,8 +272,8 @@ Monetization Support & Strategy
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
               <div class="hidden-content">
-                <h4>Data Analysis</h4>
-                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                <h4>YouTube/Instagram Management</h4>
+                <p>Complete channel & social media growth handling.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
