--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Monetization Support & Strategy
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="section-heading">
-            <h2>Check Out What Is <em>Trending</em> In Our Latest <span>News</span></h2>
+            <h2>Discover Our <em>Latest Creative Projects</em> & <span>Updates</span></h2>
           </div>
         </div>
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
