--- a/index.html
+++ b/index.html
@@ -293,6 +293,60 @@ Monetization Support & Strategy
             <h2>Discover Our <em>Latest Creative Projects</em> & <span>Updates</span></h2>
           </div>
         </div>
+        <!-- Latest Work Section -->
+<section id="latest-work" style="padding: 40px 20px; background: #f9f9f9;">
+  <div style="max-width: 1000px; margin: auto; text-align: center;">
+    <h2 style="font-family: 'Poppins', sans-serif; font-weight: 600; color: #222; margin-bottom: 30px;">Latest Work</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); gap: 20px;">
+      
+      <!-- Video 1 -->
+      <div style="box-shadow: 0 8px 20px rgba(0,0,0,0.1); border-radius: 10px; overflow: hidden;">
+        <iframe 
+          width="100%" height="180" 
+          src="https://www.youtube.com/embed/boBSnltFuVQ" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+      </div>
+
+      <!-- Video 2 -->
+      <div style="box-shadow: 0 8px 20px rgba(0,0,0,0.1); border-radius: 10px; overflow: hidden;">
+        <iframe 
+          width="100%" height="180" 
+          src="https://www.youtube.com/embed/xyQtYFIRBZg" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+      </div>
+
+      <!-- Video 3 -->
+      <div style="box-shadow: 0 8px 20px rgba(0,0,0,0.1); border-radius: 10px; overflow: hidden;">
+        <iframe 
+          width="100%" height="180" 
+          src="https://www.youtube.com/embed/FyE22qWVx0Y" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+      </div>
+
+      <!-- Video 4 -->
+      <div style="box-shadow: 0 8px 20px rgba(0,0,0,0.1); border-radius: 10px; overflow: hidden;">
+        <iframe 
+          width="100%" height="180" 
+          src="https://www.youtube.com/embed/h6sZ-QmZfXo" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+      </div>
+
+    </div>
+  </div>
+</section>
+
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="top-dec">
             <img src="assets/images/blog-dec.png" alt="">
