--- a/index.html
+++ b/index.html
@@ -463,6 +463,13 @@ Monetization Support & Strategy
     </div>
   </div>
 
+<form action="https://formspree.io/f/your-form-id" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <textarea name="message" placeholder="Your Message" required></textarea>
+  <button type="submit">Send</button>
+</form>
+
   <footer>
     <div class="container">
       <div class="row">
