--- a/index.html
+++ b/index.html
@@ -843,9 +843,17 @@ Monetization Support & Strategy
                             </li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
 
-    <p<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.1508227090976!2d81.084989!3d26.898708099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39995f8052298f77%3A0x29d1c4374a1db1bd!2sR.S%20FILMS%20STUDIO!5e0!3m2!1sen!2sin!4v1749203610564!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>p>
-  
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.1508227090976!2d81.084989!3d26.898708099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39995f8052298f77%3A0x29d1c4374a1db1bd!2sR.S%20FILMS%20STUDIO!5e0!3m2!1sen!2sin!4v1749203610564!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+                </div>
+            </div>
+        </div>
+
 
                     <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
                         <h6 class="site-footer-title mb-3">Information</h6>
