--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@ Monetization Support & Strategy
                         </ul>
                     </div>
                 </div>
+             </div>
+          </div>
+      </div>
+  
 
                 <div class="container">
                     <div class="row">
