--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ Monetization Support & Strategy
                             <p class="d-flex align-items-center mb-1">
                                 <span class="me-2">Phone</span>
 
-                                <a href="tel: 305-240-9671" class="site-footer-link">
+                                <a href="tel: +91 9792946666" class="site-footer-link">
                                     +91 9792946666
                                 </a>
                             </p>
@@ -487,46 +487,11 @@ Monetization Support & Strategy
                             <p class="d-flex align-items-center">
                                 <span class="me-2">Email</span>
 
-                                <a href="mailto:info@company.com" class="site-footer-link">
+                                <a href="info.rsfilmsofficial@gmail.com" class="site-footer-link">
                                     info.rsfilmsofficial@gmail.com
                                 </a>
                             </p>
                         </div>
-
-  <div class="row">
-
-                    <div class="col-lg-3 col-12 mb-4 pb-2">
-                        <a class="navbar-brand mb-2" href="index.html">
-                            <i class="bi-back"></i>
-                            <span>Topic</span>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-3 col-md-4 col-6">
-                        <h6 class="site-footer-title mb-3">Resources</h6>
-
-                        <ul class="site-footer-links">
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Home</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">How it works</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">FAQs</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
 
   <footer>
